@@ -18,6 +18,9 @@ v 5-0.31
 - Fixed bug in Stack that didn't decrement the size in clear().
 - Added Stack::clearNonGlobal and changed Engine::clearStacks() to use it in place of Stack::clear().
 - Added Engine::clearGlobals(), Stack::clearGlobal(), and StackFrame::replaceScope().
+- Added helper class CallbackWrapper.
+- Added helper class ForeignMethod.
+- Added helper function void addForeignMethodInstance(Engine&, const String&, BaseClass*, bool (BaseClass::*pMethod)(FFIServices&)).
 
 
 ====================
